--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://tse2.mm.bing.net/th?id=OIP.cam3s9m-K2PMQYacO3B78AHaKg&pid=Api&P=0&h=180" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ShoppyGlobe</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
